# jmap

./: .gitignore  CMakeLists.txt  README.md  jmap.c  jmap.h  main.c  make-deb.sh
Examples/: Makefile  jmap_float.c  jmap_int.c  jmap_quick_start.c  jmap_string.c
inc/: jmap.h
src/: jmap.c  main.c
src/jmap_presets/: jmap_char.c  jmap_double.c  jmap_float.c  jmap_int.c  jmap_long.c  jmap_short.c  jmap_string.c  jmap_uint.c  jmap_ulong.c  jmap_ushort.c
